--- a/modules/src/app/app.component.html
+++ b/modules/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>NgRx Introduction</h1>
+<h2>Module based</h2>
 
 <app-counter-output></app-counter-output>
 <app-counter-controls></app-counter-controls>
