--- a/components/src/app/app.component.html
+++ b/components/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>NgRx Introduction</h1>
-<h2>Component based</h2>
+<h2>Standalone Component</h2>
 <app-counter-output></app-counter-output>
 <app-counter-controls></app-counter-controls>
