694 | added triple and quadruple outputs

--- a/modules/src/app/counter-output/counter-output.component.html
+++ b/modules/src/app/counter-output/counter-output.component.html
@@ -1,2 +1,4 @@
 <p class="counter">{{ count$ | async }}</p>
-<p class="counter">Double:</p>
+<p class="counter">Double: {{ doubleCount$ | async }}</p>
+<p class="counter">Triple: {{ tripleCount$ | async }}</p>
+<p class="counter">Quadruple: {{ quadrupleCount$ | async }}</p>
