693 | added  septuple - decuple

--- a/components/src/app/counter-output/counter-output.component.html
+++ b/components/src/app/counter-output/counter-output.component.html
@@ -1,2 +1,5 @@
 <p class="counter">{{ count$ | async }}</p>
-<p class="counter">Double:</p>
+<p class="counter">Septuple: {{ septupleCount$ | async }}</p>
+<p class="counter">Octuple: {{ octupleCount$ | async }}</p>
+<p class="counter">Nonuple: {{ nonupleCount$ | async }}</p>
+<p class="counter">Decuple: {{ decupleCount$ | async }}</p>
