added 1-10 multipliers for  standalone Components

--- a/components/src/app/counter-output/counter-output.component.html
+++ b/components/src/app/counter-output/counter-output.component.html
@@ -1,5 +1,16 @@
-<p class="counter">{{ count$ | async }}</p>
-<p class="counter">Septuple: {{ septupleCount$ | async }}</p>
-<p class="counter">Octuple: {{ octupleCount$ | async }}</p>
-<p class="counter">Nonuple: {{ nonupleCount$ | async }}</p>
-<p class="counter">Decuple: {{ decupleCount$ | async }}</p>
+<p class="counter">
+  Single: {{ count$ | async }} | Double: {{ doubleCount$ | async }}
+</p>
+<p class="counter">
+  Triple: {{ tripleCount$ | async }} | Quadruple: {{ quadrupleCount$ | async }}
+</p>
+<p class="counter">
+  Quintuple: {{ quintupleCount$ | async }} | Sextuple:
+  {{ sextupleCount$ | async }}
+</p>
+<p class="counter">
+  Septuple: {{ septupleCount$ | async }} | Octuple: {{ octupleCount$ | async }}
+</p>
+<p class="counter">
+  Nonuple: {{ nonupleCount$ | async }} | Decuple: {{ decupleCount$ | async }}
+</p>
