--- a/components/src/app/counter-output/counter-output.component.css
+++ b/components/src/app/counter-output/counter-output.component.css
@@ -1,6 +1,26 @@
 .counter {
+  display: grid;
+  grid-template-columns: 50px 50px 20px 80px 80px;
+  justify-content: center;
   font-size: 2rem;
+  font-family: monospace;
   font-weight: 600;
   color: #f8bbd3;
+  gap: 0.25rem;
+}
+.counter span {
+  text-align: right;
+}
+.number,
+.multiplier,
+.result {
+  min-width: 60px;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: right;
+}
+
+.multiplier {
+  color: #f48fb1;
   text-align: center;
 }
