transformed NgRxIntroduction to 1x1 until 12

--- a/components/src/app/counter-output/counter-output.component.html
+++ b/components/src/app/counter-output/counter-output.component.html
@@ -75,3 +75,17 @@
     <span class="symbol">=</span>
     <span class="result">{{ decupleCount$ | async }}</span>
 </p>
+<p class="counter">
+    <span class="number">{{ count$ | async }}</span>
+    <span class="symbol">x </span>
+    <span class="multiplier">11</span>
+    <span class="symbol">=</span>
+    <span class="result">{{ undecupleCount$ | async }}</span>
+</p>
+<p class="counter">
+    <span class="number">{{ count$ | async }}</span>
+    <span class="symbol">x </span>
+    <span class="multiplier">12</span>
+    <span class="symbol">=</span>
+    <span class="result">{{ duodecupleCount$ | async }}</span>
+</p>
